# aoc

./: plan.txt
01/: Cargo.toml
01/src/: 01-1.rs  01-2.rs
02/: 1.c  2.c  a.out
03/: 1-and-2.php
04/: 1.js
05/: 1.rb
06/: 1.py  2.py
07/: 1.ex  1.rb  2.ex
08/: aoc.beam  aoc.erl
09/: 1.rkt
10/: 1.pro
