[package]
name = "rust"
version = "0.1.0"
authors = ["Stefan Ackermann <stefan.ackermann42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "1"
path = "src/01-1.rs"

[[bin]]
name = "2"
path = "src/01-2.rs"